Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "site_title": "tiptaptoc le site des tips et de tout et rien ",
+  "site_description": "blog pour parler de tout et de rien, mais surtout de rien ",
   "site_keywords": [
     {
       "keyword": "Next.js"
