--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
     }
   ],
   "posts_per_page": 5,
-  "twitter_account": "@kalrious",
+  "twitter_account": "@tiptaptoc",
   "github_account": "KALrious"
 }
