--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     }
   ],
   "posts_per_page": 5,
+  "cheat_sheets_per_page": 8,
   "twitter_account": "@tiptaptoc",
   "github_account": "KALrious"
 }
