--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -140,3 +140,39 @@ collections:
       - label: 'Body'
         name: 'body'
         widget: 'markdown'
+
+  - name: 'cheat-sheets'
+    label: 'CheatSheets'
+    folder: 'content/cheat-sheets/'
+    extension: 'mdx'
+    format: 'frontmatter'
+    create: true
+    slug: '{{slug}}'
+    identifier_field: slug
+    summary: '{{title}}'
+    fields:
+    - label: 'Slug'
+        name: 'slug'
+        widget: 'string'
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
+      - label: 'Publish Date'
+        name: 'date'
+        widget: 'datetime'
+        format: 'YYYY-MM-DD'
+        dateFormat: 'YYYY-MM-DD'
+        timeFormat: false
+      - label: Author
+        name: 'author'
+        widget: relation
+        collection: 'meta'
+        file: 'authors'
+        searchFields:
+          - 'authors.*.name'
+        displayFields:
+          - 'authors.*.name'
+        valueField: 'authors.*.slug'
+    - label: 'Body'
+        name: 'body'
+        widget: 'markdown'
